# Rentor-AI-Agents

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/insurance/: .env.local.example  README.md  package.json  tailwind.config.ts
apps/insurance/app/: layout.tsx  page.tsx
apps/insurance/app/api/communications/send/: route.ts
apps/insurance/app/api/renewals/run/: route.ts
apps/insurance/app/communications/: page.tsx
apps/insurance/app/corporate/: page.tsx
apps/insurance/app/policies/: page.tsx
apps/insurance/app/policies/new/: page.tsx
apps/insurance/app/properties/: page.tsx
apps/insurance/app/renewals/: page.tsx
apps/insurance/app/tenants/: page.tsx
apps/insurance/app/vendors/: page.tsx
apps/insurance/components/: Nav.tsx  PolicyTable.tsx
apps/insurance/lib/: policies.ts  supabase.ts  types.ts
apps/insurance/scripts/: scan-renewals.ts
src/: config.py  main.py
src/agents/: agent_manager.py  managed_agent.py  router.py  system_prompts.py
src/chat/: card_builder.py  google_chat.py  message_handler.py
src/knowledge/: policy_loader.py
src/models/: schemas.py
src/video/: pika_manager.py
tests/: test_agent_manager.py  test_google_chat.py
