[project]
name = "rentor-ai-agents"
version = "0.1.0"
description = "Personal AI agents for Rentor property management team"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.42.0",
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.36.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "requests>=2.32.5",
]

[project.scripts]
rentor-agents = "src.main:start"

[tool.pytest.ini_options]
testpaths = ["tests"]
